update single quotation wrapped placeholder texts in intl

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -180,6 +180,7 @@
   "6OSgRP": "Test map",
   "6PdOcy": "Cancel",
   "6XR3FS": "(UTC+09:30) Adelaide",
+  "6etACJ": "Unsupported manifest connection reference format: ''{referenceKeyFormat}''",
   "6gZ4I3": "Function ''{functionName}'' has too many inputs assigned to it",
   "6jiO7t": "Show run",
   "6jsWn/": "Required. The collection to search within.",
@@ -280,6 +281,7 @@
   "BBD8Em": "Key",
   "BCAnZP": "Either a single format specifier character or a custom format pattern that indicates how to format the value of this timestamp. If format is not provided, the ISO 8601 format ('o') is used.",
   "BEZWxB": "Clear custom value",
+  "BH26vZ": "Error code: ''{errorCode}'', Message: ''{message}''.",
   "BHe7qY": "Required. The URI encoded string.",
   "BJNUxN": "Path Parameters",
   "BKL0ZG": "Start time",
@@ -397,7 +399,6 @@
   "H8bEUn": "Required. The number that Subtrahend is removed from.",
   "HDqP2g": "Required. The key name of the form data value to return.",
   "HH970i": "Month",
-  "HJIZrG": "More diagnostic information: x-ms-client-request-id is '{clientRequestId}'.",
   "HOchry": "Select an existing connection reference or create a new one.",
   "HQ8/tk": "Button to add dynamic content if TokenPicker is shown",
   "HSJLCu": "Headers",
@@ -463,7 +464,6 @@
   "LCXZLM": "Loading Function Apps...",
   "LJmfmK": "See More",
   "LMB8am": "Creating...",
-  "LOwePI": "Invalid type on split on value '{splitOn}', split on not in array.",
   "LR/3Lr": "Configure",
   "LS8rfZ": "Returns the scheme from a URI",
   "LV/BTE": "Loading Api Management service instances...",
@@ -474,12 +474,14 @@
   "Lm9bnN": "Bullet List",
   "LoGUT3": "When used inside for-each loop, this function returns the current item of the specified loop.",
   "LpPNAD": "Add",
+  "Lt0C82": "Error executing the api ''{parameters}''.",
   "Lub7NN": "Required. The expressions that may be true.",
   "LvLksz": "Loading outputs",
   "LvpxiA": "Gateway",
   "Lwe7tQ": "(UTC+00:00) Dublin, Edinburgh, Lisbon, London",
   "M/F2/O": "Notes can only be added while editing the inputs of a step.",
   "M0xrm+": "Code view",
+  "M1jOmP": "Alt/Option + click to download ''{displayName}''",
   "M48CGd": "(UTC+11:00) Solomon Is., New Caledonia",
   "M4H0gh": "Remove",
   "M6U2LE": "The parameters will be saved when the workflow is saved. You can edit it here before save or edit it in the parameter page after save.",
@@ -572,6 +574,7 @@
   "QGbUXX": "Status code",
   "QIOOQU": "No Items",
   "QQYzHC": "Context menu for {title} card",
+  "QWUgqu": "Unsupported 'in' value : ''{value}'' in Parameter",
   "QZ5DZl": "alt text for chevron down",
   "QZBPUx": "Returns a single value matching the key name from form-data or form-encoded trigger output",
   "QZrxUk": "String functions",
@@ -651,6 +654,7 @@
   "UEryJE": "Delete Workflow Action",
   "UHCVNK": "Replaces a string with a given string",
   "UIWX6p": "Logical Name",
+  "UPjJ2k": "Invalid split on value ''{splitOn}'', cannot find in outputs.",
   "UR1CS5": "Hide code",
   "USVffu": "Content not shown due to security configuration.",
   "UYRIS/": "{fileName} (file name)",
@@ -721,7 +725,6 @@
   "Xx/naD": "Required. The name of the action whose body outputs you want.",
   "Y/bcmG": "Password",
   "Y0H9aX": "More Info",
-  "Y7yyKD": "Invalid expression type '{type}'.",
   "Y9kBz5": "Returns a binary representation of a data URI",
   "YCFhzp": "Add children",
   "YHsAKl": "Operation note",
@@ -753,7 +756,6 @@
   "Zi9gQK": "Add new item",
   "ZkjTbp": "Learn more about dynamic content.",
   "ZnGRMP": "(UTC+07:00) Tomsk",
-  "Zr0yTE": "Unsupported 'in' value : '{value}' in Parameter",
   "_++ZVe/.comment": "Title for testing section",
   "_+0yxlR.comment": "Label for the function display radio group",
   "_+20fdv.comment": "Error message when having multiple invalid authentication properties",
@@ -935,6 +937,7 @@
   "_6OSgRP.comment": "Test map panel header",
   "_6PdOcy.comment": "Cancel",
   "_6XR3FS.comment": "Timezone value ",
+  "_6etACJ.comment": "Error message to show when reference format is unsupported, {referenceKeyFormat} will be replaced based on action definition",
   "_6gZ4I3.comment": "Body text for a too many inputs card",
   "_6jiO7t.comment": "Menu item text for show run",
   "_6jsWn/.comment": "Required collection parameter to apply contains function on",
@@ -1035,6 +1038,7 @@
   "_BBD8Em.comment": "A placeholder for the dictionary key",
   "_BCAnZP.comment": "Optional string parameter to identify format of timestamp returned",
   "_BEZWxB.comment": "Tooltip content for clearing custom value",
+  "_BH26vZ.comment": "Dynamic call error message",
   "_BHe7qY.comment": "Required URI encoded string parameter to be converted using uriComponentToString function",
   "_BJNUxN.comment": "Display name for relative path parameters in trigger outputs",
   "_BKL0ZG.comment": "Column header text for start time",
@@ -1152,7 +1156,6 @@
   "_H8bEUn.comment": "Required number parameter to be minused in sub function",
   "_HDqP2g.comment": "Required string parameter to be used as key for triggerFormDataValue function",
   "_HH970i.comment": "Frequency value ",
-  "_HJIZrG.comment": "Diagnostics information on error message",
   "_HOchry.comment": "Select an existing connection reference or create a new one.",
   "_HQ8/tk.comment": "Text for if image does not show up",
   "_HSJLCu.comment": "The title of the headers field in the static result http action",
@@ -1218,7 +1221,6 @@
   "_LCXZLM.comment": "Text for loading function apps",
   "_LJmfmK.comment": "Click to view more token options",
   "_LMB8am.comment": "Button text to show a connection is being created",
-  "_LOwePI.comment": "Error message for when split on array is invalid.",
   "_LR/3Lr.comment": "Configure",
   "_LS8rfZ.comment": "Label for description of custom uriScheme Function",
   "_LV/BTE.comment": "Text for loading apim service instances",
@@ -1229,12 +1231,14 @@
   "_Lm9bnN.comment": "Bullet List text",
   "_LoGUT3.comment": "Label for description of custom item Function",
   "_LpPNAD.comment": "label to add a condition",
+  "_Lt0C82.comment": "Error message when execute dynamic api in managed connector",
   "_Lub7NN.comment": "Required expression parameters to apply or function",
   "_LvLksz.comment": "Loading outputs text",
   "_LvpxiA.comment": "Column header for connection gateway",
   "_Lwe7tQ.comment": "Timezone value ",
   "_M/F2/O.comment": "Text to tell users why notes are disabled",
   "_M0xrm+.comment": "Code view title",
+  "_M1jOmP.comment": "ARIA label text for the download link",
   "_M48CGd.comment": "Timezone value ",
   "_M4H0gh.comment": "Label to remove",
   "_M6U2LE.comment": "Text for Info Bar",
@@ -1327,6 +1331,7 @@
   "_QGbUXX.comment": "Response status code for test map API",
   "_QIOOQU.comment": "Message to show when there are no items to show",
   "_QQYzHC.comment": "Accessability label",
+  "_QWUgqu.comment": "Error message",
   "_QZ5DZl.comment": "alt text for chevron down",
   "_QZBPUx.comment": "Label for description of custom triggerFormDataValue Function",
   "_QZrxUk.comment": "Label for string functions",
@@ -1406,6 +1411,7 @@
   "_UEryJE.comment": "Title for operation node",
   "_UHCVNK.comment": "Label for description of custom replace Function",
   "_UIWX6p.comment": "Column header for connection reference logical name",
+  "_UPjJ2k.comment": "Error message for when split on value not found in operation outputs.",
   "_UR1CS5.comment": "Button to hide the code view",
   "_USVffu.comment": "Message text to inform the customer that the data is secure",
   "_UYRIS/.comment": "Title for file name parameter",
@@ -1476,7 +1482,6 @@
   "_Xx/naD.comment": "Required string parameter to determine action's body output wanted",
   "_Y/bcmG.comment": "Client Certificate Password Label Display Name",
   "_Y0H9aX.comment": "This is shown as an aria label on button as well as the tooltip that is shown after clicking the button",
-  "_Y7yyKD.comment": "Error message on invalid expression type during building",
   "_Y9kBz5.comment": "Label for description of custom dataUriToBinary Function",
   "_YCFhzp.comment": "Add the current node and its children to the map",
   "_YHsAKl.comment": "Label For Operation Description in About Panel",
@@ -1508,7 +1513,6 @@
   "_Zi9gQK.comment": "Label to add item to property editor",
   "_ZkjTbp.comment": "Text for dynamic content link",
   "_ZnGRMP.comment": "Timezone value ",
-  "_Zr0yTE.comment": "Error message",
   "_a7j3gS.comment": "Required number parameter to divide in mod function",
   "_a7x6VI.comment": "Timezone value ",
   "_aAXnqw.comment": "Required number of occurrences to get nthIndexOf function with",
@@ -1637,7 +1641,6 @@
   "_gfBWfH.comment": "Label for Email type dynamically added parameter",
   "_gg0j4S.comment": "Timezone value ",
   "_gkY5ya.comment": "Delete dynamic parameter corresponding to this row",
-  "_gpbgjJ.comment": "Error message for when split on value not found in operation outputs.",
   "_gu9o9z.comment": "Label for description of custom iterationIndexes Function",
   "_gvDMuq.comment": "Select a Batch Workflow resource",
   "_h+W3VW.comment": "Label for Number type dynamically added parameter",
@@ -1647,7 +1650,6 @@
   "_hBLPXK.comment": "Timezone value ",
   "_hN7iBP.comment": "A duration of time shown in seconds",
   "_hPM6iC.comment": "Label for description of custom sub Function",
-  "_hdnZ9Y.comment": "ARIA label text for the download link",
   "_hic23z.comment": "Error validation message",
   "_hq1mk6.comment": "Error while parsing expression for path value",
   "_hrbDu6.comment": "Label text for retry duration",
@@ -1676,6 +1678,7 @@
   "_idQjOP.comment": "Label for properties tab",
   "_iq+tiv.comment": "Hour of the day",
   "_iql+jn.comment": "This is a period in time in seconds. {seconds} is replaced by the number and s is an abbreviation of seconds",
+  "_irGw0o.comment": "Diagnostics information on error message",
   "_isnFBi.comment": "Message on switching levels with nodes/mappings not connected to a target schema node",
   "_iy8rNf.comment": "Button text for running test",
   "_izS5yQ.comment": "Learn more link text",
@@ -1696,7 +1699,6 @@
   "_jcA3Ig.comment": "Required string parameter to be used as key for formDataMultiValues function",
   "_jfInxm.comment": "Parameter Link Text",
   "_jgOaTX.comment": "Error Message on generating schema based on payload",
-  "_jjYA4u.comment": "Error message to show when reference format is unsupported, {referenceKeyFormat} will be replaced based on action definition",
   "_juR40n.comment": "label for request options input",
   "_juvF+0.comment": "Gateway dropdown label",
   "_k/oqFL.comment": "Required base64 string parameter to be converted using base64ToString function",
@@ -1801,7 +1803,6 @@
   "_p16/4S.comment": "Label text for request or response headers",
   "_p1Qtm5.comment": "Filter by In App category of connectors",
   "_p5tz8/.comment": "Timezone value ",
-  "_p7YGxW.comment": "Error message when execute dynamic api in managed connector",
   "_pC2nr2.comment": "Placeholder text for Key",
   "_pH2uak.comment": "Label to collapse",
   "_pIczsS.comment": "Label text for request end time",
@@ -1830,7 +1831,6 @@
   "_qQoQFv.comment": "Message shown when the current connection is invalid",
   "_qSejoi.comment": "Label for description of custom lessOrEquals Function",
   "_qSt0Sb.comment": "Accessibility prefix for the input label",
-  "_qTqSqD.comment": "Dynamic call error message",
   "_qUMXpq.comment": "Swagger endpoint input label",
   "_qUWBUX.comment": "A duration of time shown in days",
   "_qc5S69.comment": "Label for description of custom length Function",
@@ -1910,6 +1910,7 @@
   "_uRurmg.comment": "Timezone value ",
   "_uUlBZ8.comment": "Label for description of custom addHours Function",
   "_uWf/I5.comment": "Button to open map checker",
+  "_uYwh1f.comment": "Error message on invalid expression type during building",
   "_uZH8Qs.comment": "description of action timeout setting",
   "_uc/PoD.comment": "Required integer parameter to see how far in the past",
   "_uc3ytS.comment": "Select a runtime placeholder",
@@ -1980,6 +1981,7 @@
   "_xV/oyK.comment": "Required parameter for new/existing property value in setProperty function",
   "_xV4Koe.comment": "Label for code tab",
   "_xYyPR8.comment": "Label for description of custom uriPath Function",
+  "_xZ8ps7.comment": "Error message for when split on array is invalid.",
   "_xZhieP.comment": "Timezone value ",
   "_xb/DIr.comment": "Timezone value ",
   "_xt5TeT.comment": "Description for Workflow Parameters Part 1",
@@ -2145,7 +2147,6 @@
   "gfBWfH": "Email",
   "gg0j4S": "(UTC-06:00) Saskatchewan",
   "gkY5ya": "Delete",
-  "gpbgjJ": "Invalid split on value '{splitOn}', cannot find in outputs.",
   "gu9o9z": "When used inside until loop, this function returns the current iteration index of the specified loop.",
   "gvDMuq": "Select a Batch Workflow resource",
   "h+W3VW": "Number",
@@ -2155,7 +2156,6 @@
   "hBLPXK": "(UTC-04:00) Georgetown, La Paz, Manaus, San Juan",
   "hN7iBP": "{seconds, plural, one {# second} other {# seconds}}",
   "hPM6iC": "Returns the result from subtracting two numbers",
-  "hdnZ9Y": "Alt/Option + click to download '{displayName}'",
   "hic23z": "The value is too large.",
   "hq1mk6": "Operation path value does not match the template for segment. Path {pathValue}, Template {pathTemplate}",
   "hrbDu6": "Duration",
@@ -2184,6 +2184,7 @@
   "idQjOP": "Properties",
   "iq+tiv": "11",
   "iql+jn": "{seconds}s",
+  "irGw0o": "More diagnostic information: x-ms-client-request-id is ''{clientRequestId}''.",
   "isnFBi": "Elements and mappings not connected to a target element are removed.",
   "iy8rNf": "Test",
   "izS5yQ": "Learn more",
@@ -2204,7 +2205,6 @@
   "jcA3Ig": "Required. The key name of the form data values to return.",
   "jfInxm": "Edit in JSON",
   "jgOaTX": "Unable to generate schema",
-  "jjYA4u": "Unsupported manifest connection reference format: '{referenceKeyFormat}'",
   "juR40n": "Duration",
   "juvF+0": "Gateway",
   "k/oqFL": "Required. The base64 encoded string.",
@@ -2309,7 +2309,6 @@
   "p16/4S": "Headers",
   "p1Qtm5": "In-App",
   "p5tz8/": "(UTC+13:00) Samoa",
-  "p7YGxW": "Error executing the api '{parameters}'.",
   "pC2nr2": "Enter key",
   "pH2uak": "Collapse",
   "pIczsS": "End time",
@@ -2338,7 +2337,6 @@
   "qQoQFv": "Invalid connection.",
   "qSejoi": "Returns true if the first argument is less than or equal to the second",
   "qSt0Sb": "Required",
-  "qTqSqD": "Error code: '{errorCode}', Message: '{message}'.",
   "qUMXpq": "Swagger Endpoint",
   "qUWBUX": "{days, plural, one {# day} other {# days}}",
   "qc5S69": "Returns the number of elements in an array or string",
@@ -2418,6 +2416,7 @@
   "uRurmg": "(UTC+10:00) Guam, Port Moresby",
   "uUlBZ8": "Adds an integer number of hours to a string timestamp passed in",
   "uWf/I5": "Show me",
+  "uYwh1f": "Invalid expression type ''{type}''.",
   "uZH8Qs": "Limit the maximum duration between the retries and asynchronous responses for this action. Note: This does not alter the request timeout of a single request.",
   "uc/PoD": "Required. The number of time units the desired time is in the past.",
   "uc3ytS": "Select a runtime",
@@ -2488,6 +2487,7 @@
   "xV/oyK": "Required. The name of the new or existing property.",
   "xV4Koe": "Code",
   "xYyPR8": "Returns the path from a URI. If path is not specified, returns '/'",
+  "xZ8ps7": "Invalid type on split on value ''{splitOn}'', split on not in array.",
   "xZhieP": "(UTC+05:00) Islamabad, Karachi",
   "xb/DIr": "(UTC+12:00) Coordinated Universal Time+12",
   "xt5TeT": "Parameters are shared across workflows in a Logic App.",
