update description text

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -36,6 +36,7 @@
   "/yYyOq": "Resource Group",
   "00xlpa": "Shared",
   "02vyBk": "Trigger",
+  "04AwK7": "Error code: ''{errorCode}'', Message: ''{message}''.",
   "07ZsoY": "Returns the start of the hour to a string timestamp passed in",
   "08e2rO": "The managed identity used with this operation no longer exists. To continue, set up an identity or change the connection.",
   "09B9CU": "Returns the URL to invoke the trigger or action. Note: This function can only be used in an httpWebhook and apiConnectionWebhook, not in a manual, recurrence, http, or apiConnection.",
@@ -165,6 +166,7 @@
   "5MWmiO": "Line Number",
   "5SAQOb": "Authority",
   "5aa76N": "Returns the first element in the array or string passed in",
+  "5akc1Q": "Unsupported 'in' value : ''{value}'' in Parameter",
   "5b0sKi": "Returns true if an object, array, or string is empty",
   "5cPiWA": "Required. The name of the loop whose item you want.",
   "5dCAjy": "Day",
@@ -180,7 +182,6 @@
   "6OSgRP": "Test map",
   "6PdOcy": "Cancel",
   "6XR3FS": "(UTC+09:30) Adelaide",
-  "6etACJ": "Unsupported manifest connection reference format: ''{referenceKeyFormat}''",
   "6gZ4I3": "Function ''{functionName}'' has too many inputs assigned to it",
   "6jiO7t": "Show run",
   "6jsWn/": "Required. The collection to search within.",
@@ -244,6 +245,7 @@
   "9JuvQ4": "Returns a data URI of a value",
   "9Jv3+1": "Returns an object with an additional property value pair",
   "9SuA/E": "12",
+  "9W0lck": "Invalid split on value ''{splitOn}'', cannot find in outputs.",
   "9YGcT2": "ChildErrors",
   "9YZ873": "Text",
   "9atGYe": "Add",
@@ -281,7 +283,6 @@
   "BBD8Em": "Key",
   "BCAnZP": "Either a single format specifier character or a custom format pattern that indicates how to format the value of this timestamp. If format is not provided, the ISO 8601 format ('o') is used.",
   "BEZWxB": "Clear custom value",
-  "BH26vZ": "Error code: ''{errorCode}'', Message: ''{message}''.",
   "BHe7qY": "Required. The URI encoded string.",
   "BJNUxN": "Path Parameters",
   "BKL0ZG": "Start time",
@@ -315,6 +316,7 @@
   "DDIIAQ": "Node",
   "DGMwU4": "Use sample payload to generate schema",
   "DJW8RE": "Select a value",
+  "DQV7aK": "Alt/Option + click to download ''{displayName}''",
   "DWd9vy": "every week",
   "DWsh56": "Enter client ID",
   "DZZ3fj": "Duration",
@@ -419,6 +421,7 @@
   "IW2MjQ": "Converts a string timestamp passed in from a UTC to a target time zone",
   "IXy91L": "Add a target schema",
   "IbGIq3": "Error Code",
+  "IjEKvh": "Error executing the api ''{parameters}''.",
   "IjZFjQ": "(UTC+07:00) Barnaul, Gorno-Altaysk",
   "IooQu1": "Advanced options",
   "Ip7Iax": "Returns the index of the n-th occurrence of a value within a string (case-insensitive, invariant culture)",
@@ -474,14 +477,12 @@
   "Lm9bnN": "Bullet List",
   "LoGUT3": "When used inside for-each loop, this function returns the current item of the specified loop.",
   "LpPNAD": "Add",
-  "Lt0C82": "Error executing the api ''{parameters}''.",
   "Lub7NN": "Required. The expressions that may be true.",
   "LvLksz": "Loading outputs",
   "LvpxiA": "Gateway",
   "Lwe7tQ": "(UTC+00:00) Dublin, Edinburgh, Lisbon, London",
   "M/F2/O": "Notes can only be added while editing the inputs of a step.",
   "M0xrm+": "Code view",
-  "M1jOmP": "Alt/Option + click to download ''{displayName}''",
   "M48CGd": "(UTC+11:00) Solomon Is., New Caledonia",
   "M4H0gh": "Remove",
   "M6U2LE": "The parameters will be saved when the workflow is saved. You can edit it here before save or edit it in the parameter page after save.",
@@ -574,7 +575,6 @@
   "QGbUXX": "Status code",
   "QIOOQU": "No Items",
   "QQYzHC": "Context menu for {title} card",
-  "QWUgqu": "Unsupported 'in' value : ''{value}'' in Parameter",
   "QZ5DZl": "alt text for chevron down",
   "QZBPUx": "Returns a single value matching the key name from form-data or form-encoded trigger output",
   "QZrxUk": "String functions",
@@ -654,7 +654,6 @@
   "UEryJE": "Delete Workflow Action",
   "UHCVNK": "Replaces a string with a given string",
   "UIWX6p": "Logical Name",
-  "UPjJ2k": "Invalid split on value ''{splitOn}'', cannot find in outputs.",
   "UR1CS5": "Hide code",
   "USVffu": "Content not shown due to security configuration.",
   "UYRIS/": "{fileName} (file name)",
@@ -714,6 +713,7 @@
   "XX1ioe": "(UTC+03:00) Kuwait, Riyadh",
   "XaS4ds": "(UTC-08:00) Pacific Time (US & Canada)",
   "XbtEq9": "Count",
+  "Xew1Df": "More diagnostic information: x-ms-client-request-id is ''{clientRequestId}''.",
   "Xj0Gr/": "Target schema element cannot be deleted.",
   "Xj4xwI": "The managed identity used with this operation no longer exists. To continue, select an available identity or change the connection.",
   "XkBxv5": "Select a target schema",
@@ -793,6 +793,7 @@
   "_/yYyOq.comment": "Header for resource group name",
   "_00xlpa.comment": "Filter by Shared category of connectors",
   "_02vyBk.comment": "Badge showing an action is a logic apps trigger",
+  "_04AwK7.comment": "Dynamic call error message. Do not remove the double single quotes around the placeholder texts, as it is needed to wrap the placeholder text in single quotes.",
   "_07ZsoY.comment": "Label for description of custom startOfHour Function",
   "_08e2rO.comment": "Error message when logic app doesnt have managed identities",
   "_09B9CU.comment": "documentation of custom listCallbackUrl Function",
@@ -922,6 +923,7 @@
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
   "_5SAQOb.comment": "Authority Label Display Name",
   "_5aa76N.comment": "Label for description of custom first Function",
+  "_5akc1Q.comment": "Error message for unsupported values. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_5b0sKi.comment": "Label for description of custom empty Function",
   "_5cPiWA.comment": "Required string parameter to determine loop wanted",
   "_5dCAjy.comment": "Frequency value ",
@@ -937,7 +939,6 @@
   "_6OSgRP.comment": "Test map panel header",
   "_6PdOcy.comment": "Cancel",
   "_6XR3FS.comment": "Timezone value ",
-  "_6etACJ.comment": "Error message to show when reference format is unsupported, {referenceKeyFormat} will be replaced based on action definition",
   "_6gZ4I3.comment": "Body text for a too many inputs card",
   "_6jiO7t.comment": "Menu item text for show run",
   "_6jsWn/.comment": "Required collection parameter to apply contains function on",
@@ -1001,6 +1002,7 @@
   "_9JuvQ4.comment": "Label for description of custom dataUri Function",
   "_9Jv3+1.comment": "Label for description of custom addProperty Function",
   "_9SuA/E.comment": "Hour of the day",
+  "_9W0lck.comment": "Error message for when split on value not found in operation outputs. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_9YGcT2.comment": "The title of the child errors field in the static result parseJson action",
   "_9YZ873.comment": "Label for Text type dynamically added parameter",
   "_9atGYe.comment": "Insert Expression",
@@ -1038,7 +1040,6 @@
   "_BBD8Em.comment": "A placeholder for the dictionary key",
   "_BCAnZP.comment": "Optional string parameter to identify format of timestamp returned",
   "_BEZWxB.comment": "Tooltip content for clearing custom value",
-  "_BH26vZ.comment": "Dynamic call error message",
   "_BHe7qY.comment": "Required URI encoded string parameter to be converted using uriComponentToString function",
   "_BJNUxN.comment": "Display name for relative path parameters in trigger outputs",
   "_BKL0ZG.comment": "Column header text for start time",
@@ -1072,6 +1073,7 @@
   "_DDIIAQ.comment": "Title for other node",
   "_DGMwU4.comment": "Button Label for allowing users to generate from schema",
   "_DJW8RE.comment": "Placeholder for dropdown",
+  "_DQV7aK.comment": "ARIA label text for the download link. Do not remove the double single quotes around the display name, as it is needed to wrap the placeholder text.",
   "_DWd9vy.comment": "Recurrence schedule description every week",
   "_DWsh56.comment": "Client ID Placeholder Text",
   "_DZZ3fj.comment": "Column header text for duration",
@@ -1176,6 +1178,7 @@
   "_IW2MjQ.comment": "Label for description of custom convertFromUtc Function",
   "_IXy91L.comment": "label to inform to add a target schema to be used",
   "_IbGIq3.comment": "The title of the error code property within Error in the static result schema",
+  "_IjEKvh.comment": "Error message when execute dynamic api in managed connector. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_IjZFjQ.comment": "Timezone value ",
   "_IooQu1.comment": "Advanced options",
   "_Ip7Iax.comment": "Label for description of custom nthIndexOf Function",
@@ -1231,14 +1234,12 @@
   "_Lm9bnN.comment": "Bullet List text",
   "_LoGUT3.comment": "Label for description of custom item Function",
   "_LpPNAD.comment": "label to add a condition",
-  "_Lt0C82.comment": "Error message when execute dynamic api in managed connector",
   "_Lub7NN.comment": "Required expression parameters to apply or function",
   "_LvLksz.comment": "Loading outputs text",
   "_LvpxiA.comment": "Column header for connection gateway",
   "_Lwe7tQ.comment": "Timezone value ",
   "_M/F2/O.comment": "Text to tell users why notes are disabled",
   "_M0xrm+.comment": "Code view title",
-  "_M1jOmP.comment": "ARIA label text for the download link",
   "_M48CGd.comment": "Timezone value ",
   "_M4H0gh.comment": "Label to remove",
   "_M6U2LE.comment": "Text for Info Bar",
@@ -1331,7 +1332,6 @@
   "_QGbUXX.comment": "Response status code for test map API",
   "_QIOOQU.comment": "Message to show when there are no items to show",
   "_QQYzHC.comment": "Accessability label",
-  "_QWUgqu.comment": "Error message",
   "_QZ5DZl.comment": "alt text for chevron down",
   "_QZBPUx.comment": "Label for description of custom triggerFormDataValue Function",
   "_QZrxUk.comment": "Label for string functions",
@@ -1411,7 +1411,6 @@
   "_UEryJE.comment": "Title for operation node",
   "_UHCVNK.comment": "Label for description of custom replace Function",
   "_UIWX6p.comment": "Column header for connection reference logical name",
-  "_UPjJ2k.comment": "Error message for when split on value not found in operation outputs.",
   "_UR1CS5.comment": "Button to hide the code view",
   "_USVffu.comment": "Message text to inform the customer that the data is secure",
   "_UYRIS/.comment": "Title for file name parameter",
@@ -1471,6 +1470,7 @@
   "_XX1ioe.comment": "Timezone value ",
   "_XaS4ds.comment": "Timezone value ",
   "_XbtEq9.comment": "title for retry count setting",
+  "_Xew1Df.comment": "Diagnostics information on error message. Do not remove the double single quotes around the placeholder texts, as it is needed to wrap the placeholder text in single quotes.",
   "_Xj0Gr/.comment": "Message informing that target element cannot be removed",
   "_Xj4xwI.comment": "Erorr mesade when managed identity is not present in logic apps",
   "_XkBxv5.comment": "Target schema dropdown placeholder",
@@ -1678,7 +1678,6 @@
   "_idQjOP.comment": "Label for properties tab",
   "_iq+tiv.comment": "Hour of the day",
   "_iql+jn.comment": "This is a period in time in seconds. {seconds} is replaced by the number and s is an abbreviation of seconds",
-  "_irGw0o.comment": "Diagnostics information on error message",
   "_isnFBi.comment": "Message on switching levels with nodes/mappings not connected to a target schema node",
   "_iy8rNf.comment": "Button text for running test",
   "_izS5yQ.comment": "Learn more link text",
@@ -1750,6 +1749,7 @@
   "_mGpKsl.comment": "Label for description of custom dataUriToString Function",
   "_mOr9ll.comment": "description of request options duration setting",
   "_mPakaD.comment": "Label for description of custom encodeUriComponent Function",
+  "_mPuXlv.comment": "Error message for when split on array is invalid. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_mQotIu.comment": "Title for the select connection tab",
   "_mYQFtf.comment": "OAuth Error message when missing properties",
   "_mZCHKf.comment": "Timezone value ",
@@ -1825,6 +1825,7 @@
   "_q87X20.comment": "Label for description of custom addSeconds Function",
   "_q8vnZQ.comment": "tool tip explaining what schema validation setting does",
   "_q9hf8i.comment": "Timezone value ",
+  "_qAlTD5.comment": "Error message to show when reference format is unsupported, {referenceKeyFormat} will be replaced based on action definition. Do not remove the double single quotes around the display name, as it is needed to wrap the placeholder text.",
   "_qGfwxW.comment": "A Label for a Dropdown",
   "_qJpnIL.comment": "Label for description of custom endsWith Function",
   "_qPUX59.comment": "successful run",
@@ -1910,7 +1911,6 @@
   "_uRurmg.comment": "Timezone value ",
   "_uUlBZ8.comment": "Label for description of custom addHours Function",
   "_uWf/I5.comment": "Button to open map checker",
-  "_uYwh1f.comment": "Error message on invalid expression type during building",
   "_uZH8Qs.comment": "description of action timeout setting",
   "_uc/PoD.comment": "Required integer parameter to see how far in the past",
   "_uc3ytS.comment": "Select a runtime placeholder",
@@ -1981,7 +1981,6 @@
   "_xV/oyK.comment": "Required parameter for new/existing property value in setProperty function",
   "_xV4Koe.comment": "Label for code tab",
   "_xYyPR8.comment": "Label for description of custom uriPath Function",
-  "_xZ8ps7.comment": "Error message for when split on array is invalid.",
   "_xZhieP.comment": "Timezone value ",
   "_xb/DIr.comment": "Timezone value ",
   "_xt5TeT.comment": "Description for Workflow Parameters Part 1",
@@ -1995,6 +1994,7 @@
   "_yIZP4R.comment": "Timezone value ",
   "_yVh9kr.comment": "Hour of the day",
   "_ydqOly.comment": "placeholder text for row values",
+  "_yjierd.comment": "Error message on invalid expression type during building. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_yoCi15.comment": "Select an existing connection or create a new one.",
   "_yph4eq.comment": "Timezone value ",
   "_yqRrQ/.comment": "Label for date and time functions",
@@ -2184,7 +2184,6 @@
   "idQjOP": "Properties",
   "iq+tiv": "11",
   "iql+jn": "{seconds}s",
-  "irGw0o": "More diagnostic information: x-ms-client-request-id is ''{clientRequestId}''.",
   "isnFBi": "Elements and mappings not connected to a target element are removed.",
   "iy8rNf": "Test",
   "izS5yQ": "Learn more",
@@ -2256,6 +2255,7 @@
   "mGpKsl": "Returns a string representation of a data URI",
   "mOr9ll": "The maximum duration on a single outbound request from this action. If the request doesn't finish within this limit after running retries, the action fails.",
   "mPakaD": "Url encodes the input string",
+  "mPuXlv": "Invalid type on split on value ''{splitOn}'', split on not in array.",
   "mQotIu": "Select Connection",
   "mYQFtf": "Missing required properties 'secret' or 'pfx' and 'password' for authentication type 'ActiveDirectoryOAuth'.",
   "mZCHKf": "(UTC+12:00) Anadyr, Petropavlovsk-Kamchatsky",
@@ -2331,6 +2331,7 @@
   "q87X20": "Adds an integer number of seconds to a string timestamp passed in",
   "q8vnZQ": "Validate request body against the schema provided. In case there is a mismatch, HTTP 400 will be returned.",
   "q9hf8i": "(UTC+04:00) Astrakhan, Ulyanovsk",
+  "qAlTD5": "Unsupported manifest connection reference format: ''{referenceKeyFormat}''",
   "qGfwxW": "Managed identity",
   "qJpnIL": "Checks if the string ends with a value (case-insensitive, invariant culture)",
   "qPUX59": "is successful",
@@ -2416,7 +2417,6 @@
   "uRurmg": "(UTC+10:00) Guam, Port Moresby",
   "uUlBZ8": "Adds an integer number of hours to a string timestamp passed in",
   "uWf/I5": "Show me",
-  "uYwh1f": "Invalid expression type ''{type}''.",
   "uZH8Qs": "Limit the maximum duration between the retries and asynchronous responses for this action. Note: This does not alter the request timeout of a single request.",
   "uc/PoD": "Required. The number of time units the desired time is in the past.",
   "uc3ytS": "Select a runtime",
@@ -2487,7 +2487,6 @@
   "xV/oyK": "Required. The name of the new or existing property.",
   "xV4Koe": "Code",
   "xYyPR8": "Returns the path from a URI. If path is not specified, returns '/'",
-  "xZ8ps7": "Invalid type on split on value ''{splitOn}'', split on not in array.",
   "xZhieP": "(UTC+05:00) Islamabad, Karachi",
   "xb/DIr": "(UTC+12:00) Coordinated Universal Time+12",
   "xt5TeT": "Parameters are shared across workflows in a Logic App.",
@@ -2501,6 +2500,7 @@
   "yIZP4R": "(UTC-10:00) Hawaii",
   "yVh9kr": "8",
   "ydqOly": "Choose a value",
+  "yjierd": "Invalid expression type ''{type}''.",
   "yoCi15": "Select an existing connection or create a new one.",
   "yph4eq": "(UTC+01:00) Belgrade, Bratislava, Budapest, Ljubljana, Prague",
   "yqRrQ/": "Date and time functions",
