feat(designer): Handling error nodes in serialization

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -162,6 +162,7 @@
   "4vmGh0": "Service request ID",
   "4wjJs0": "14",
   "5+MuPz": "Enter a valid double.",
+  "5FINOY": "Workflow has parameter validation errors on the following operations: {invalidNodes}",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5MWmiO": "Line Number",
   "5SAQOb": "Authority",
@@ -394,6 +395,7 @@
   "GyUe4C": "Modify options regarding functions",
   "GzQQqH": "Array",
   "Gziyq8": "File Content",
+  "H/QVod": "Workflow has settings validation errors on the following operations: {invalidNodes}",
   "H17jEE": "URI parsing functions",
   "H1wnHr": "Required. The string to slice.",
   "H2WdiZ": "Enter the valid minute values (from 0 to 59) separated by comma, e.g., 15,30",
@@ -691,6 +693,7 @@
   "WLj8DH": "Please enter a valid dictionary",
   "WOOYW1": "Actions perform operations on data or communicate between systems to execute.",
   "WS9kXD": "Required. The first integer in the array.",
+  "WTZvGW": "Workflow has invalid connections on the following operations: {invalidNodes}",
   "WUe3DY": "Shorthand for trigger().outputs",
   "WcnIF8": "Remove",
   "WgoP7R": "Returns the result from multiplying the two numbers",
@@ -919,6 +922,7 @@
   "_4vmGh0.comment": "Label text for retry service request ID",
   "_4wjJs0.comment": "Hour of the day",
   "_5+MuPz.comment": "Error validation message",
+  "_5FINOY.comment": "Error message to show when there are invalid connections in the nodes.",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
   "_5SAQOb.comment": "Authority Label Display Name",
@@ -1151,6 +1155,7 @@
   "_GyUe4C.comment": "Description for the functions section",
   "_GzQQqH.comment": "This is an option in a dropdown where users can select type Array for their parameter.",
   "_Gziyq8.comment": "Placeholder title for a newly inserted File parameter",
+  "_H/QVod.comment": "Error message to show when there are invalid connections in the nodes.",
   "_H17jEE.comment": "Label for URI parsing functions",
   "_H1wnHr.comment": "Required string parameter to slice",
   "_H2WdiZ.comment": "Placeholder for schedule minutes",
@@ -1448,6 +1453,7 @@
   "_WLj8DH.comment": "Error Message for Invalid Dictionary",
   "_WOOYW1.comment": "Description of what Actions are, on a tooltip about Actions",
   "_WS9kXD.comment": "Required number parameter to identify lower bound in range function",
+  "_WTZvGW.comment": "Error message to show when there are invalid connections in the nodes.",
   "_WUe3DY.comment": "Label for description of custom triggerOutputs Function",
   "_WcnIF8.comment": "Remove card from canvas",
   "_WgoP7R.comment": "Label for description of custom mul Function",
