Fixing error scenarios in dynamic inputs that impact serialization

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -449,7 +449,6 @@
   "Jpox7O": "When enabled, this action will run with the user from the \"Run as\" setting in the Dataverse trigger.",
   "JpthWY": "(UTC-03:00) Montevideo",
   "Jq2Y/o": "Required. The numeric format string.",
-  "JtV9ju": "Failed to retrive dynamic inputs. Error details: '{message}'",
   "JzqgNM": "Set the tracking id for the run. For split-on this tracking id is for the initiating request.",
   "K50znc": "Required. The object to add a new property to.",
   "K7/DnZ": "Output",
@@ -615,6 +614,7 @@
   "SmCQys": "Custom Tracking Id",
   "Sr8PcK": "No operations found",
   "SvQyvs": "Done",
+  "Sw+u4M": "Failed to retrive dynamic inputs. Error details: ''{message}''",
   "SyFXM3": "Read less",
   "Sz8KN3": "Test",
   "T0BFpC": "Set the tracking id for the run. For split-on this tracking id is for the initiating request.",
@@ -1210,7 +1210,6 @@
   "_Jpox7O.comment": "description of invoker connection setting",
   "_JpthWY.comment": "Timezone value ",
   "_Jq2Y/o.comment": "Required format parameter to apply formatNumber function with",
-  "_JtV9ju.comment": "Error message to show when loading dynamic inputs failed",
   "_JzqgNM.comment": "description for client tracking id setting",
   "_K50znc.comment": "Required object parameter to add a property in addProperty function",
   "_K7/DnZ.comment": "The title of the output field in the static result parseJson action",
@@ -1376,6 +1375,7 @@
   "_SmCQys.comment": "title for client tracking id setting",
   "_Sr8PcK.comment": "Message to show when no operations are found",
   "_SvQyvs.comment": "confirmation text",
+  "_Sw+u4M.comment": "Error message to show when loading dynamic inputs failed",
   "_SyFXM3.comment": "Text for read less button",
   "_Sz8KN3.comment": "Test",
   "_T0BFpC.comment": "description of tracking id input field of split on setting",
