--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -162,6 +162,7 @@
   "4vmGh0": "Service request ID",
   "4wjJs0": "14",
   "5+MuPz": "Enter a valid double.",
+  "5FINOY": "Workflow has parameter validation errors on the following operations: {invalidNodes}",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5MWmiO": "Line Number",
   "5SAQOb": "Authority",
@@ -395,6 +396,7 @@
   "GyUe4C": "Modify options regarding functions",
   "GzQQqH": "Array",
   "Gziyq8": "File Content",
+  "H/QVod": "Workflow has settings validation errors on the following operations: {invalidNodes}",
   "H17jEE": "URI parsing functions",
   "H1wnHr": "Required. The string to slice.",
   "H2WdiZ": "Enter the valid minute values (from 0 to 59) separated by comma, e.g., 15,30",
@@ -447,7 +449,6 @@
   "Jpox7O": "When enabled, this action will run with the user from the \"Run as\" setting in the Dataverse trigger.",
   "JpthWY": "(UTC-03:00) Montevideo",
   "Jq2Y/o": "Required. The numeric format string.",
-  "JtV9ju": "Failed to retrive dynamic inputs. Error details: '{message}'",
   "JzqgNM": "Set the tracking id for the run. For split-on this tracking id is for the initiating request.",
   "K50znc": "Required. The object to add a new property to.",
   "K7/DnZ": "Output",
@@ -613,6 +614,7 @@
   "SmCQys": "Custom Tracking Id",
   "Sr8PcK": "No operations found",
   "SvQyvs": "Done",
+  "Sw+u4M": "Failed to retrive dynamic inputs. Error details: ''{message}''",
   "SyFXM3": "Read less",
   "Sz8KN3": "Test",
   "T0BFpC": "Set the tracking id for the run. For split-on this tracking id is for the initiating request.",
@@ -692,6 +694,7 @@
   "WLj8DH": "Please enter a valid dictionary",
   "WOOYW1": "Actions perform operations on data or communicate between systems to execute.",
   "WS9kXD": "Required. The first integer in the array.",
+  "WTZvGW": "Workflow has invalid connections on the following operations: {invalidNodes}",
   "WUe3DY": "Shorthand for trigger().outputs",
   "WcnIF8": "Remove",
   "WgoP7R": "Returns the result from multiplying the two numbers",
@@ -920,6 +923,7 @@
   "_4vmGh0.comment": "Label text for retry service request ID",
   "_4wjJs0.comment": "Hour of the day",
   "_5+MuPz.comment": "Error validation message",
+  "_5FINOY.comment": "Error message to show when there are invalid connections in the nodes.",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
   "_5SAQOb.comment": "Authority Label Display Name",
@@ -1153,6 +1157,7 @@
   "_GyUe4C.comment": "Description for the functions section",
   "_GzQQqH.comment": "This is an option in a dropdown where users can select type Array for their parameter.",
   "_Gziyq8.comment": "Placeholder title for a newly inserted File parameter",
+  "_H/QVod.comment": "Error message to show when there are invalid connections in the nodes.",
   "_H17jEE.comment": "Label for URI parsing functions",
   "_H1wnHr.comment": "Required string parameter to slice",
   "_H2WdiZ.comment": "Placeholder for schedule minutes",
@@ -1205,7 +1210,6 @@
   "_Jpox7O.comment": "description of invoker connection setting",
   "_JpthWY.comment": "Timezone value ",
   "_Jq2Y/o.comment": "Required format parameter to apply formatNumber function with",
-  "_JtV9ju.comment": "Error message to show when loading dynamic inputs failed",
   "_JzqgNM.comment": "description for client tracking id setting",
   "_K50znc.comment": "Required object parameter to add a property in addProperty function",
   "_K7/DnZ.comment": "The title of the output field in the static result parseJson action",
@@ -1371,6 +1375,7 @@
   "_SmCQys.comment": "title for client tracking id setting",
   "_Sr8PcK.comment": "Message to show when no operations are found",
   "_SvQyvs.comment": "confirmation text",
+  "_Sw+u4M.comment": "Error message to show when loading dynamic inputs failed",
   "_SyFXM3.comment": "Text for read less button",
   "_Sz8KN3.comment": "Test",
   "_T0BFpC.comment": "description of tracking id input field of split on setting",
@@ -1450,6 +1455,7 @@
   "_WLj8DH.comment": "Error Message for Invalid Dictionary",
   "_WOOYW1.comment": "Description of what Actions are, on a tooltip about Actions",
   "_WS9kXD.comment": "Required number parameter to identify lower bound in range function",
+  "_WTZvGW.comment": "Error message to show when there are invalid connections in the nodes.",
   "_WUe3DY.comment": "Label for description of custom triggerOutputs Function",
   "_WcnIF8.comment": "Remove card from canvas",
   "_WgoP7R.comment": "Label for description of custom mul Function",
